crates/mermaid-text/tests/regression_corpus/snapshots/er_grid_layout_8_entities.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
                         places                              contains
┌──────────────────┐                ┌─────────────────────┐            ┌────────────────────┐
│     CUSTOMER     ├1──────────────*├        ORDER        ├+──────────+├        ITEM        ├*┐
├──────────────────┤                ├─────────────────────┤            ├────────────────────┤ │
│  int    id   PK  │                │  int id         PK  │            │  int orderId   FK  │ │
│  string name     │                │  int customerId FK  │            │  int productId FK  │ │
└──────────────────┘                └─────────────────────┘            └────────────────────┘ │
                                                                                    descbills │
                                                                                              │
                            groups                                                            │
┌────────────────────────┐          ┌───────────────────┐      ┌─────────────┐                │
│        PRODUCT         ┤*────────1├     CATEGORY      │      │   ACCOUNT   ┤1───────────────│
├────────────────────────┤          ├───────────────────┤      ├─────────────┤                │
│  int    id         PK  │          │  int    id    PK  │      │  int id PK  │                │
│  string name           │          │  string label     │      └─────────────┘                │
│  int    categoryId FK  │          └───────────────────┘                                     │
└────────────────────────┘                                                                    │
                                                                                              │
                                                                                              │
                                                                                              │
┌─────────────┐                                                                               │
│   INVOICE   ┤1──────────────────────────────────────────────────────────────────────────────┘
├─────────────┤
│  int id PK  │
└─────────────┘
