crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_app_db_architecture.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: natural
---
            ╭───────╮
            │ ───── │
           ▸│ Redis │
           │╰───────╯
           │
           │
           │                                ╭────────────╮
┌─────┐────┘╭──────────╮     ┌────────┐   ┌▸│ ────────── │
│ App │────┐│ ──────── │    ▸│ Worker │───┘▸│ PostgreSQL │
└─────┘─┐  ▸│ RabbitMQ │────┘└────────┘    │╰────────────╯
        │   ╰──────────╯                   │
        └──────────────────────────────────┘
