crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_back_edge_lr.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---
┌───┐               ┌───┐
│ A │────┐┌───┐    ▸│ C │
└─▴─┘    ▸│ B │────┘└─┬─┘
  │       └───┘       ┘
  └───────────────────┘
