crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_back_edge_td_cycle.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
            ┌──────┐
            │ Idle │◂──────┐
            └──────┘       │
                │          │
                │          │
                │          │
                │event     │
                │          │
                │          │
             ┌──┘          │
        ┌────▾────┐        │
        │ Running │        │retry
        └─────────┘        │
            │ └───────┐    │
            │         │    │
            │         │    │
       done │         │error
            │         │    │
            │         │    │
          ┌─┘         │    │
      ┌───▾──┐   ┌────▾───┐│
      │ Done │   │ Failed ├┘
      └──────┘   └────────┘
