crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_back_edge_td_cycle.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---
              ┌──────┐
              │ Idle │◂────┐
              └──────┘     │
                  │        │
                  │        │
                  │        │
                  │event   │
                  │        │
                  │        │
                ┌─┘        │
           ┌────▾────┐     │
           │ Running │     │retry
           └─────────┘     │
          ┌────┘ └────┐    │
          │           │    │
          │           │    │
     done │           │error
          │           │    │
          │           │    │
          │           │    │
      ┌───▾──┐   ┌────▾───┐│
      │ Done │   │ Failed ├┘
      └──────┘   └────────┘
