crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_basic_decision.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
                                   ┌───────┐
                                  ▸│ Build │──────┐
                               yes│└───────┘      │
┌───────┐       ╱──────────╲──────┘               ▸┌────────┐
│ Start │──────▸│ Decision │   no                  │ Deploy │
└───────┘       ╲──────────╱──────┐               ▸└────────┘
                                  │┌──────┐       │
                                  ▸│ Skip │───────┘
                                   └──────┘
