crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_basic_decision.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
                                   ┌───────┐
                                  ▸│ Build │──────┐
                               yes│└───────┘      │
┌───────┐       ╱──────────╲──────┘               ▸┌────────┐
│ Start │──────▸│ Decision │   no                  │ Deploy │
└───────┘       ╲──────────╱──────┐               ▸└────────┘
                                  │┌──────┐       │
                                  ▸│ Skip │───────┘
                                   └──────┘
